--- a/Resources/Prototypes/AMeowStationProto/FurrySpecies/Mobs/Species/furry.yml
+++ b/Resources/Prototypes/AMeowStationProto/FurrySpecies/Mobs/Species/furry.yml
@@ -12,7 +12,7 @@
         Cold: 0.5
         Bloodloss: 0.5
   - type: Icon # It will not have an icon in the adminspawn menu without this. Body parts seem fine for whatever reason.
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: full
   - type: Body
     prototype: Furry
