--- a/Resources/Prototypes/AMeowStationProto/Entities/Clothing/Hands/Gloves/pawswhite.yml
+++ b/Resources/Prototypes/AMeowStationProto/Entities/Clothing/Hands/Gloves/pawswhite.yml
@@ -5,9 +5,9 @@
   description: Почувствуй себя котиком UwU
   components:
   - type: Sprite
-    sprite: AMeowStat\Clothing\Hands\Gloves\pawswhite.rsi
+    sprite: AMeowStat/Clothing/Hands/Gloves/pawswhite.rsi
   - type: Clothing
-    sprite: AMeowStat\Clothing\Hands\Gloves\pawswhite.rsi
+    sprite: AMeowStat/Clothing/Hands/Gloves/pawswhite.rsi
   - type: Fiber
     fiberColor: fibers-white
   - type: MeleeWeapon
