--- a/Resources/Prototypes/AMeowStationProto/Entities/Clothing/Under/sockss.yml
+++ b/Resources/Prototypes/AMeowStationProto/Entities/Clothing/Under/sockss.yml
@@ -5,9 +5,9 @@
   description: Чулочки для настоящих фурри UwU
   components:
   - type: Sprite
-    sprite: AMeowStat\Clothing\Under\stockingsblue.rsi
+    sprite: AMeowStat/Clothing/Under/stockingsblue.rsi
   - type: Clothing
-    sprite: AMeowStat\Clothing\Under\stockingsblue.rsi
+    sprite: AMeowStat/Clothing/Under/stockingsblue.rsi
 
 - type: entity
   parent: ClothingShoesBase
@@ -16,9 +16,9 @@
   description: Чулочки для настоящих фурри UwU
   components:
   - type: Sprite
-    sprite: AMeowStat\Clothing\Under\stockingsblack.rsi
+    sprite: AMeowStat/Clothing/Under/stockingsblack.rsi
   - type: Clothing
-    sprite: AMeowStat\Clothing\Under\stockingsblack.rsi
+    sprite: AMeowStat/Clothing/Under/stockingsblack.rsi
 
 - type: entity
   parent: ClothingShoesBase
@@ -27,9 +27,9 @@
   description: Чулочки для настоящих фурри UwU
   components:
   - type: Sprite
-    sprite: AMeowStat\Clothing\Under\stockingswhite.rsi
+    sprite: AMeowStat/Clothing/Under/stockingswhite.rsi
   - type: Clothing
-    sprite: AMeowStat\Clothing\Under\stockingswhite.rsi
+    sprite: AMeowStat/Clothing/Under/stockingswhite.rsi
 
 - type: entity
   parent: ClothingShoesBase
@@ -38,6 +38,6 @@
   description: Чулочки для настоящих фурри UwU
   components:
   - type: Sprite
-    sprite: AMeowStat\Clothing\Under\stockingspink.rsi
+    sprite: AMeowStat/Clothing/Under/stockingspink.rsi
   - type: Clothing
-    sprite: AMeowStat\Clothing\Under\stockingspink.rsi
+    sprite: AMeowStat/Clothing/Under/stockingspink.rsi
