--- a/Resources/Prototypes/AMeowStationProto/Entities/Objects/Consumable/Food/Baked/croutons.yml
+++ b/Resources/Prototypes/AMeowStationProto/Entities/Objects/Consumable/Food/Baked/croutons.yml
@@ -9,7 +9,7 @@
     tags:
     - Croutons
   - type: Sprite
-    sprite: AMeowStat\Object\Consumable\Food\Baked\croutons.rsi
+    sprite: AMeowStat/Object/Consumable/Food/Baked/croutons.rsi
   - type: SolutionContainerManager
     solutions:
       food:
@@ -18,7 +18,7 @@
         - ReagentId: Nutriment
           Quantity: 3
   - type: Item
-    sprite: AMeowStat\Object\Consumable\Food\Baked\croutons.rsi
+    sprite: AMeowStat/Object/Consumable/Food/Baked/croutons.rsi
     size: Tiny
 
 - type: entity
