--- a/Resources/Prototypes/AMeowStationProto/FurrySpecies/Body/Parts/furry.yml
+++ b/Resources/Prototypes/AMeowStationProto/FurrySpecies/Body/Parts/furry.yml
@@ -20,7 +20,7 @@
   parent: [PartFurry, BaseTorso]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "torso_m"
   - type: Extractable
     juiceSolution:
@@ -36,7 +36,7 @@
   parent: [PartFurry, BaseHead]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "head_m"
   - type: Extractable
     juiceSolution:
@@ -52,7 +52,7 @@
   parent: [PartFurry, BaseLeftArm]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "l_arm"
 
 - type: entity
@@ -61,7 +61,7 @@
   parent: [PartFurry, BaseRightArm]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "r_arm"
 
 - type: entity
@@ -70,7 +70,7 @@
   parent: [PartFurry, BaseLeftHand]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "l_hand"
 
 - type: entity
@@ -79,7 +79,7 @@
   parent: [PartFurry, BaseRightHand]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "r_hand"
 
 - type: entity
@@ -88,7 +88,7 @@
   parent: [PartFurry, BaseLeftLeg]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "l_leg"
 
 - type: entity
@@ -97,7 +97,7 @@
   parent: [PartFurry, BaseRightLeg]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "r_leg"
 
 - type: entity
@@ -106,7 +106,7 @@
   parent: [PartFurry, BaseLeftFoot]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "l_foot"
 
 - type: entity
@@ -115,5 +115,5 @@
   parent: [PartFurry, BaseRightFoot]
   components:
   - type: Sprite
-    sprite: AMeowStat\FurrySpecies\furry.rsi
+    sprite: AMeowStat/FurrySpecies/furry.rsi
     state: "r_foot"
