--- a/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/slime_cat_parts.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/slime_cat_parts.yml
@@ -15,7 +15,7 @@
   bodyPart: Tail
   markingCategory: Tail
   speciesRestriction: [SlimePerson]
-  sponsorOnly: true # Corvax-Sponsors
+  sponsorOnly: tru # Corvax-Sponsors
   sprites:
   - sprite: Corvax/Mobs/Customization/slime_cat_parts.rsi
     state: slime_tail_cat_wag # Corvax-Sponsors
