--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/cyberlibs.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/cyberlibs.yml
@@ -4,7 +4,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -19,7 +18,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -34,7 +32,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -49,7 +46,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -64,7 +60,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -79,7 +74,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -94,7 +88,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -109,7 +102,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -124,7 +116,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -155,7 +146,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -170,7 +160,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -185,7 +174,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -200,7 +188,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -215,7 +202,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -230,7 +216,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -245,7 +230,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -260,7 +244,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -276,7 +259,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -291,7 +273,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -306,7 +287,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -321,7 +301,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -336,7 +315,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -351,7 +329,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -366,7 +343,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -381,7 +357,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -396,7 +371,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -412,7 +386,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -427,7 +400,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -442,7 +414,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -457,7 +428,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -472,7 +442,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -487,7 +456,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -502,7 +470,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -517,7 +484,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -531,8 +497,7 @@
   id: CyberlimbTorsoMorpheus
   bodyPart: Chest
   markingCategory: Chest
-  speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
+  speciesRestriction: [ Human, Dwarf, Arachnid ]+
   coloring:
     default:
       type:
@@ -549,7 +514,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -564,7 +528,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -579,7 +542,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -594,7 +556,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -609,7 +570,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -624,7 +584,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -639,7 +598,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -654,7 +612,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -670,7 +627,6 @@
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
   sexRestriction: Male
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -686,7 +642,6 @@
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
   sexRestriction: Female
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -702,7 +657,7 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
+
   coloring:
     default:
       type:
@@ -717,7 +672,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -732,7 +686,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -747,7 +700,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -762,7 +714,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -777,7 +728,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -792,7 +742,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -807,7 +756,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -822,7 +770,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -838,7 +785,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -853,7 +799,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -868,7 +813,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -883,7 +827,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -898,7 +841,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -913,7 +855,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -928,7 +869,6 @@
   bodyPart: LFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -943,7 +883,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -958,7 +897,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -974,7 +912,6 @@
   bodyPart: RArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -989,7 +926,6 @@
   bodyPart: LArm
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1004,7 +940,6 @@
   bodyPart: RHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1019,7 +954,6 @@
   bodyPart: LHand
   markingCategory: Arms
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1034,7 +968,6 @@
   bodyPart: RLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1049,7 +982,6 @@
   bodyPart: LLeg
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1063,8 +995,7 @@
   id: CyberlimbLFootXion
   bodyPart: LFoot
   markingCategory: Legs
-  speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
+  speciesRestriction: [ Human, Dwarf, Arachnid 
   coloring:
     default:
       type:
@@ -1079,7 +1010,6 @@
   bodyPart: RFoot
   markingCategory: Legs
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
@@ -1094,7 +1024,6 @@
   bodyPart: Chest
   markingCategory: Chest
   speciesRestriction: [ Human, Dwarf, Arachnid ]
-  sponsorOnly: false
   coloring:
     default:
       type:
