--- a/Resources/Prototypes/AMeowStationProto/Entities/Objects/Misc/handcuffsBDSM.yml
+++ b/Resources/Prototypes/AMeowStationProto/Entities/Objects/Misc/handcuffsBDSM.yml
@@ -1,23 +1,1 @@
-- type: entity
-  name: Пушистые Наручники
-  description: Мягкие наручники.
-  id: handcuffsbdsm
-  parent: BaseItem
-  components:
-  - type: Item
-    size: 3
-  - type: Handcuff
-    cuffedRSI: AMeowStat/handcuffsbdsm.rsi
-    bodyIconState: body-overlay
-  - type: Sprite
-    sprite: AMeowStat/handcuffsbdsm.rsi
-    state: handcuff
-  - type: Tag
-    tags:
-    - Handcuffs
-  - type: MeleeWeapon
-    resetOnHandSelected: false
-    animation: WeaponArcDisarm
-    damage:
-      types:
-        Blunt: 0
+# Obnova
