--- a/Resources/Prototypes/AMeowStationProto/Catalog/VendingMachines/Inventories/furrymat.yml
+++ b/Resources/Prototypes/AMeowStationProto/Catalog/VendingMachines/Inventories/furrymat.yml
@@ -11,5 +11,5 @@
     ClothingUnderSocksRedFurry: 3
     ClothingUnderSocksPurpleFurry: 3
   emaggedInventory:
-    HandcuffsBDSM: 3
+    Handcuffs: 3
     ClothingMaskMuzzle: 2
